<resources>
    <string name="app_name">Sensors</string>
    <string name="keep_updating">Keep Updating</string>
    <string name="sensor_name">Sensor name</string>
    <string name="sensor_name_2">Sensor name 2</string>

    <string name="back">Back</string>

    <string name="record">Record</string>
    <string name="stop_recording">Stop Recording</string>

    <string name="pause">Pause</string>
    <string name="start">Start</string>

    <string name="data_prefix_3d">x=\ny=\nz=</string>

    <string name="data_unit_velocity">m/s²</string>
    <string name="data_unit_angular_velocity">rad/s</string>
    <string name="data_unit_temperature">℃</string>
    <string name="data_unit_degree">°</string>
    <string name="data_unit_distance">cm</string>
    <string name="data_unit_relative_humidity">%</string>

    <string name="recording_starter_title">Select Sensors to Record</string>
    <string name="btn_positive">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="set_storage_path">Set Storage Folder</string>
    <string name="cpu_usage">CPU Usage:</string>
    <string name="written_frames">Written Frames:</string>
    <string name="written_bytes">Written Bytes:</string>
    <string name="written_frames_value">1234</string>
    <string name="written_bytes_value">1,432,654</string>
    <string name="writing_flash_light_description">Flash Light</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="recording_activity_table_all_sensors">All Sensors</string>
    <string name="value_no_data">--</string>
    <string name="all_sensors">All Sensors</string>
    <string name="status_recording">RECORDING</string>
    <string name="set_recording_delay">Set Recording Delay</string>
    <string name="start_or_stop">Start/Stop</string>
    <string name="text_all_sensor">All Sensors</string>

</resources>
