<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvElapsedTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="Elapsed Time: 00:00:30"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_recording"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="16">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/cpu_usage" />

                <TextView
                    android:id="@+id/tvCpuUsage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value_no_data" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/written_frames" />

                <TextView
                    android:id="@+id/tvWrittenFrames"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value_no_data" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/value_no_data" />

                <TextView
                    android:id="@+id/tvWrittenBytes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/written_bytes_value" />
            </TableRow>
        </TableLayout>

        <SurfaceView
            android:id="@+id/CpuUsageChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9" />

        <ImageView
            android:id="@+id/ivWritingFlashLight"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/writing_flash_light_description"
            app:srcCompat="@android:drawable/btn_star" />

    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/tvSavePath"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TableLayout
            android:id="@+id/tblSensorsInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/table_id"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:paddingEnd="10dp"
                    android:text="Sensor Name"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:paddingEnd="10dp"
                    android:text="Hits Last Frame"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Accumulated Hits"
                    android:textStyle="bold" />
            </TableRow>
            <TableRow
                android:id="@+id/rowAllSensors"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/place_holder"
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:paddingEnd="10dp"
                    android:text="@string/all_sensors"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAllSensorsLastHits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/value_no_data"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAllSensorsAllHits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value_no_data"
                    android:textStyle="bold" />

            </TableRow>


        </TableLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tvSavePath"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        tools:text="Saved Location: /sdcard/data/sensor_record_20180808XXXX.dat"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>